Tue Oct 10 13:12:00 BST 2000 peter@retep.org.uk
	- DatabaseMetaData.supportsAlterTableWithDropColumn() as psql doesn't
	  support dropping of individual columns
	- Merged in some last patches. Only 1 left, which may not be compatible
	  with jdbc1
	- Merged in my old retepsql project. Makefile now includes it.
	
Mon Oct 02 12:30:00 BST 2000 peter@retep.org.uk
	- Merged in byte[] array allocation changes submitted by Gunnar R|nning
	  <gunnar@candleweb.no>
	
Mon Sep 25 14:22:00 BST 2000 peter@retep.org.uk
	- Removed the DriverClass kludge. Now the org.postgresql.Driver class
	  is compiled from a template file, and now has both the connection
	  class (ie jdbc1/jdbc2) and the current version's from Makefile.global
	- 
	
Thu Jul 20 16:30:00 BST 2000 petermount@it.maidstone.gov.uk
	- Fixed DatabaseMetaData.getTableTypes()

Tue Jun 06 12:00:00 BST 2000 petermount@it.maidstone.gov.uk
	- Added org/postgresql/DriverClass.java to the list of files removed
	  by make clean (it's dynamically built)
	- Fixed Statement, so that the update count is valid when an SQL
	  DELETE operation is done.
	- While fixing the update count, made it easier to get the OID of
	  the last insert as well. Example is in example/basic.java

Tue Jun 06 08:37:00 BST 2000 petermount@it.maidstone.gov.uk
	- Removed a hardwired 8K limit on query strings
	- Added some missing org.'s in Connection that prevented
	  the use of the geometric types.

Thu Jun 01 07:26:00 BST 2000 petermount@it.maidstone.gov.uk
	- Removed timezone in getTimestamp() methods in ResultSet.

Mon May 15 22:30:00 BST 2000 peter@retep.org.uk
	- Fixed the message Makefile produces after compiling. It still said
	  about the old Driver class, not the new package. Spotted by
	  Joseph Shraibman <jks@p1.selectacast.net>

Thu May 04 11:38:00 BST 2000 petermount@it.maidstone.gov.uk
	- Corrected incorrect date in CHANGELOG
	- Fixed the ImageViewer example
	
Wed May 03 16:47:00 BST 2000 petermount@it.maidstone.gov.uk